exercises added along with complete and incomplete timelord app

--- a/exercises/jasmine/lib/jasmine-2.0.0/jasmine.css
+++ b/exercises/jasmine/lib/jasmine-2.0.0/jasmine.css
@@ -1,3 +1,10 @@
+*{
+  margin:0;
+  padding:0;
+  font-family:sans-serif;
+  color:#333;
+}
+
 body { background-color: #eeeeee; padding: 0; margin: 5px; overflow-y: scroll; }
 
 .html-reporter { font-size: 11px; font-family: Monaco, "Lucida Console", monospace; line-height: 14px; color: #333333; }
