--- a/complete_timelord_app/style.css
+++ b/complete_timelord_app/style.css
@@ -2,23 +2,37 @@
   margin:0;
   padding:0;
   font-family:sans-serif;
+  font-weight:lighter;
   color:#333;
 }
 html{
   background:#333;
 }
 body{
-  max-width:800px;
+  max-width:600px;
   padding:16px;
   background:#ccc;
   margin: 0 auto;
+  text-align: center;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+h1{
+  font-size:64px;
+  margin-bottom:16px;
 }
 .btn{
-  padding:7px;
+  padding:15px;
+  font-size:32px;
   border: 1px solid #333;
   border-radius:4px;
   display: inline-block;
   vertical-align: top;
   background:#eee;
   text-decoration: none;
+}
+.display{
+  font-size:64px;
+  display:block;
+  margin-top:16px;
 }
